# GE-A2A-Marketplace-Agent

./: .gitignore  README.md
0_adk_agent/: README.md  __main__.py
0_agent_setup/: README.md  pyproject.toml
0_agent_setup/.adk/: session.db
0_agent_setup/time_agent/: agent.py
0_agent_setup/time_agent/.adk/: session.db
1_a2a/: README.md  pyproject.toml
1_a2a/remote_a2a/remote_time_agent/: agent.json
1_a2a/test_client_agent/: agent.py
1_add_a2a/: README.md
1_add_a2a/remote_a2a/.adk/: session.db
2_oauth/: README.md  pyproject.toml
2_oauth/test_client_agent/: agent.py
2_setup_oauth_dcr/: README.md  pyproject.toml
2_setup_oauth_dcr/test_client_agent/: agent.py
3_add_DCR/: README.md  pyproject.toml
3_add_DCR/dcr/: main.py
3_deploy_agent/: README.md  agent.json  deploy.sh  simple_deploy.sh  verify_deployment.py
3_deploy_agent/remote_a2a/: .dockerignore  Dockerfile  requirements.txt
4_add_DCR/: README.md  pyproject.toml
4_add_DCR/dcr/: main.py
4_gcp_marketplace_setup/: .dockerignore  Procfile  README_MARKETPLACE.md  deploy.sh  marketplace_handler.py  procurement-api.sh  pyproject.toml
4_gcp_marketplace_setup/dcr/: main.py  utils.py
4_gcp_marketplace_setup/test-dcr/: test-deployed-dcr.py
5_gcp_marketplace_setup/: .dockerignore  .gcloudignore  Dockerfile  README.md  README_MARKETPLACE.md  agent.json  deploy.sh  marketplace_handler.py  procurement-api.sh  requirements.txt  setup_firestore.sh
5_gcp_marketplace_setup/dcr/: main.py  utils.py
5_gcp_marketplace_setup/test-dcr/: test-local-dcr.py
(+10 files in other folders)
